--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
 	<img src="https://i.ibb.co/Bwcnbdv/Boblox-Logo.png" alt="Boblox Logo">
 	<h1>Games</h1>
-	<p>No games are available at the current moment.</p>
+	<p>No games are available at the current moment. <a href="games.html">Click here</a> to see all games online.</p>
 </body>
 </html>
