--- a/games.html
+++ b/games.html
@@ -6,10 +6,29 @@
 		h1, p {
 			font-family: Verdana, Tahoma, sans-serif;
 		}
+		button {
+			font-size: 24px;
+			margin: 10px;
+			padding: 10px 20px;
+			border: none;
+			border-radius: 5px;
+			background-color: #4286f4;
+			color: white;
+			font-weight: bold;
+			cursor: pointer;
+		}
 	</style>
 </head>
 <body>
 	<img src="https://i.ibb.co/Bwcnbdv/Boblox-Logo.png" alt="Boblox Logo">
 	<p>No games are available at the current moment.</p>
+	<div>
+		<button>B</button>
+		<button>O</button>
+		<button>B</button>
+		<button>L</button>
+		<button>O</button>
+		<button>X</button>
+	</div>
 </body>
 </html>
