--- a/games.html
+++ b/games.html
@@ -9,7 +9,9 @@
 	</style>
 </head>
 <body>
-	<img src="https://i.ibb.co/Bwcnbdv/Boblox-Logo.png" alt="Boblox Logo">
+	<a href="https://unicodeixixixi.github.io/Boblox/">
+		<img src="https://i.ibb.co/Bwcnbdv/Boblox-Logo.png" alt="Boblox Logo">
+	</a>
 	<p>No games are available at the current moment.</p>
 	<div>
 		<button>B</button>
