--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 	<img src="https://i.ibb.co/Bwcnbdv/Boblox-Logo.png" alt="Boblox Logo">
 	<h1>Games</h1>
 	<p>No games are available at the current moment. <a href="games.html">Click here</a> to see all games online.</p>
+	<h1>Models</h1>
+	<p>No models are available at the current moment. <a href="models.html">Click here</a> to see all games online.</p>
 </body>
 </html>
