--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 	<h1>Games</h1>
 	<p>No games are available at the current moment. <a href="games.html">Click here</a> to see all games online.</p>
 	<h1>Models</h1>
-	<p>No models are available at the current moment. <a href="models.html">Click here</a> to see all games online.</p>
+	<p>No models are available at the current moment. <a href="models.html">Click here</a> to see all models online.</p>
 </body>
 </html>
