--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 	<p>No games are available at the current moment. <a href="games.html">Click here</a> to see all games online.</p>
 	<h1>Models</h1>
 	<p>No models are available at the current moment. <a href="models.html">Click here</a> to see all models online.</p>
+	<br>
+	<br>
+	<p><a href="about.html">About Boblox</a> | <a href="tos.html">Terms of Service</a> | </p>
 </body>
 </html>
