--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Boblox Logo</title>
+	<link rel="icon" href="favicon.ico">
 	<style>
 		h1, p {
 			font-family: Verdana, Tahoma, sans-serif;
