added download link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<p>No games are available at the current moment. <a href="games.html">Click here</a> to see all games online.</p>
 	<h1>Models</h1>
 	<p>No models are available at the current moment. <a href="models.html">Click here</a> to see all models online.</p>
+	<h1>Install</h1>
+	<p>You can download Boblox <a href="https://github.com/unicodeixixixi/Boblox/releases/download/v0.0.1-prototype/Boblox.exe">here.</a></p>
 	<br>
 	<br>
 	<p><a href="about.html">About Boblox</a> | <a href="tos.html">Terms of Service</a> | </p>
