--- a/tos.html
+++ b/tos.html
@@ -17,17 +17,6 @@
     <p>This is a list of terms that users of the platform "BOBLOX" should follow:</p>
     <h1>Rules</h1>
     <p>Boblox users shall not:</p>
-    <br>
-    <p>1. Swear</p>
-    <br><p>This includes words like "fuck", "shit", "cunt", "bitch", and other words.</p>
-    <br>
-    <p>2. Discriminate</p>
-    <br><p>Boblox users shall not discriminate other users on the site, and should treat all players with respect.</p>
-    <br>
-    <p>3. Post inappropriate content</p>
-    <br><p>This includes pornographic content that the user may create inside the physics engine provided to make models and games.</p>
-    <br>
-    <p>4. Date</p>
-    <br><p>Boblox users, as mostly underage shouldn't participate in romantic activities including dating, weddings, etc.</p>
+    </p><ol><li>Do not share personal information such as your full name, address, phone number, or any other identifying information.</li><li>Do not share your password with anyone, even your friends.</li><li>Do not share inappropriate or explicit content with anyone.</li><li>Do not bully, harass, or threaten other users.</li><li>Do not cheat or exploit in games or other features on Boblox.</li><li>Do not use bad language or engage in any other inappropriate behavior on the platform.</li><li>Do not engage in any activity that violates the terms of service or community guidelines of Boblox.</li><li>Always respect the opinions, beliefs, and choices of other users.</li><li>If you encounter any inappropriate or suspicious behavior from other users, report it to Boblox support immediately.</li><li>Always keep your parents or guardians informed about your online activities and seek their guidance and supervision whenever necessary.</li></ol><p>Remember, these rules are designed to protect you and ensure a safe and positive experience on Boblox. By following them, you can enjoy all the great features of the platform while also staying safe and protected.</p>
 </body>
 </html>
